[gd_scene load_steps=3 format=2]

[ext_resource path="res://images/items/apple.png" type="Texture" id=1]
[ext_resource path="res://scripts/gui/item_displayer_vertical.gd" type="Script" id=2]

[node name="item_displayer_vertical" type="Control"]
margin_right = -624.0
margin_bottom = -560.0
rect_min_size = Vector2( 176, 40 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main_panel" type="Panel" parent="."]
margin_right = 176.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main_container" type="HBoxContainer" parent="."]
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 25
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_texture" type="TextureRect" parent="main_container"]
margin_right = 35.0
margin_bottom = 35.0
rect_min_size = Vector2( 35, 35 )
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_amount_label" type="Label" parent="main_container/item_texture"]
margin_left = 24.0
margin_top = 24.0
margin_right = 75.0
margin_bottom = 55.0
text = "4
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_name_label" type="Label" parent="main_container"]
margin_left = 60.0
margin_top = 10.0
margin_right = 97.0
margin_bottom = 24.0
text = "Apple"
